# lumapy

./: .clang-format  .gitignore  10cubes.frag  10cubes.vert  CHANGELOG.md  CMakeLists.txt  README.md  cube_tex.frag  cube_tex.vert  pyproject.toml  quad_tex.frag  test.py  test_10cubes.py  test_cube.py  test_cube_texture.py  test_empty.py  test_texture.py  test_triangle.py
.github/workflows/: build.yml
bazalt/: __init__.py  _core.pyi
examples/01_empty_window/: main.py
examples/02_triangle/: main.py
examples/03_textured_quad/: main.py  quad_tex.vert
examples/04_colored_cube/: cube.frag  cube.vert  main.py
examples/05_textured_cube/: cube_tex.frag  cube_tex.vert  main.py
examples/06_multiple_cubes/: main.py
examples/07_model_loading/: main.py  model.frag  model.vert
examples/08_pyqt_integration/: main.py
examples/09_shadow_map/: main.py  scene.frag  scene.vert  shadow.vert
examples/10_gbuffer_mrt/: composite.frag  composite.vert  gbuffer.frag  gbuffer.vert  main.py
examples/11_particles/: main.py  particles.comp  particles.frag  particles.vert
examples/12_hot_reload/: main.py  palette.glsl  shader.frag  shader.vert
examples/13_compute_postprocess/: main.py
examples/14_skybox/: main.py  sky.comp  skybox.frag  skybox.vert
examples/assets/: download_san_miguel.py
src/: Buffer.hpp  CommandBuffer.hpp  Context.hpp  DescriptorSet.hpp  Error.hpp  Features.hpp  Format.hpp  HotReload.hpp  Image.hpp  ImmediateSubmit.hpp  Logger.hpp  MpscQueue.hpp  Pipeline.hpp  RenderTarget.hpp  Renderer.hpp  ResourceTracker.hpp  Sampler.hpp  ScopeGuard.hpp  ShaderCompiler.hpp  SurfaceProvider.hpp  Texture.hpp  UploadManager.hpp  main.cpp  vma_impl.cpp  window.hpp
tests/: conftest.py  test_barriers.py  test_bindings.py  test_buffers.py  test_chaining.py  test_compute.py  test_context.py  test_cubemaps.py  test_descriptor_freeing.py  test_diagnostics.py  test_errors.py  test_frames.py  test_headless.py  test_hot_reload.py  test_images.py  test_lifetime.py  test_mipmaps.py  test_msaa.py  test_readme.py  test_stubs.py  test_targets.py  test_uploads.py
tests/shaders/: add_one.comp  depth_view.frag  double.comp  fullscreen.vert  mrt.frag  pos2.vert  push.frag  push_add.comp  sample_lod.frag  skybox.frag  ssbo.frag  store_array.comp  textured.frag  ubo.frag  ubo_scale.comp  write_vertices.comp
