[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "bazalt"
version = "0.3.0"
description = "Python library for rapid GPU shader prototyping using Vulkan"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Piotr Szamocki"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/SzamockiP/bazalt"
Repository = "https://github.com/SzamockiP/bazalt"

[project.optional-dependencies]
examples = ["PyGLM"]

[tool.scikit-build]
wheel.packages = ["bazalt"]

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = ["-A", "x64"]